--- a/becky.html
+++ b/becky.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="G1mz4NP5kAbK6gIQBIrzDBCUwI0xu+nIRdNFaHpul2E+XK1uPuwVqrlXBfMlaZzqN5hpSFpABgUwdcABFWIDCLbUv8BEFdFJfin1GY7IVBZ940btgcS9h9dQq7oJSNGa">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u+oOQ1swZR/XjBBLTehtA0yPAhgWmeEwIUzlx9n6nyE/kgmmcTItS2XYlMXxSkAJkgOWS/E72xbCo3d8jphTe3yozRKO1MbWgFyMsYAbJ7mPuB52e2G5JsXDcUSaqRy7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
