--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RB6TKkTGz2OFBd7n2aKz0GJsY+Y/nMmIfb3sVNYaW4cogfYWwYHGYnQtSPa+1l92z2AhY3hm+thgN3j9Pt0d0soI86Q4wttfO8UDdypAGssCPG+eYGgkQ6ui9QXSyN1e">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PFDK8BfY0UBytZH3xSr0HwzMnpmdZ8Gv0B+8XpApDb/YQOaC7pCxg5OhubQ26srFpF9LreFFuCr7CNIjgjw3QSNlgRKMbxqHU3pnI23S6FJi/2qD0Iwg2v6wwlqHb9Lu">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
